# scalpel

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPER_ROADMAP.html  DEVELOPER_ROADMAP.md  README.md  SCALPEL_AGENT_CONTEXT.md  SCALPEL_MASTER_HANDBOOK.md  SPEC.md  biome.json  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json
.kimi-code/: mcp.json
docs/: ARCHITECTURE.md  AUDIT.md  CURRENT_STATE.md  DOCS_MAINTENANCE.md  HARDENING.md  KIMI_TEST_PROMPT.md  SAFETY_MODEL.md  STACK.md  TESTING_AND_RELIABILITY.md  TOOL_CONTRACTS.md
docs/releases/: 2026-06-19-v1.0.0-alpha.1-audit.md  2026-06-19-v1.0.0-alpha.1.md
evals/: README.md
evals/read-only/: scalpel-reliability.xml
scalpel-reliability-suite/: RELIABILITY_CHECKLIST.md  TESTING_NOTES.md
scalpel-reliability-suite/config/: deployment.yaml  manifest.json  pyproject.toml  settings.ini
scalpel-reliability-suite/docs/: API.md  CHANGELOG.md  CONTRIBUTING.md  README.md
scalpel-reliability-suite/fixtures/: ambiguous-markers.txt  duplicated-functions.py  large-content.md  long-lines.txt  mixed-newlines.txt  move-source.txt  numbered-lines.txt  repeated-strings.txt
scalpel-reliability-suite/src/: app.ts  config.py  data.json  types.d.ts  utils.ts
scripts/: hardening.ts  mcp-smoke.ts  package-smoke.ts
src/: index.ts  version.ts
src/core/: config.ts  diff.ts  errors.ts  fault-injection.ts  file-metadata.ts  journal.ts  line-endings.ts  mutation.ts  path-lock.ts  path-policy.ts  text.ts  write-file-atomic.ts  write-transaction.ts
src/infra/: logger.ts
src/mcp/: annotations.ts  output-schema.ts  register-tools.ts  resources.ts  result.ts  server.ts
src/tools/: append.ts  batch-edit.ts  config.ts  create.ts  delete-range.ts  diff.ts  grep.ts  insert.ts  list-dir.ts  move.ts  patch.ts  prepend.ts  read-chunk.ts  read.ts  replace-between-markers.ts  stat.ts
tests/helpers/: temp.ts
tests/integration/: stdio-server.test.ts
tests/unit/core/: file-metadata.test.ts  path-lock.test.ts  (+2 more)
(+6 files in other folders)
